Fix whitespace

--- a/assets/css/product-detail.css
+++ b/assets/css/product-detail.css
@@ -43,7 +43,7 @@
 }
 
 .row.product-detail-view-info {
-    margin-top: 100px;
+    margin-top: 40px;
 
     p {
         line-height: 1.5;
@@ -65,5 +65,12 @@
             background-color: var(--yellow);
             width: 100%;
         }
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .product-detail-view-text {
+        padding-left: 0;
+        margin-top: 24px;
     }
 }
